Disabling motion blur while persistent data is enabled results in objects disappearing or not rendering properly - Cycles OptiX #90666

Closed
opened 2021-08-14 04:33:52 +02:00 by Alaska · 11 comments
Member

System Information
Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01

Blender Version
Broken version: 3.0.0 Alpha, branch: master, commit date: 2021-08-13 21:31, hash: 6a4533dd02
Broken version: 2.93.2 release
Worked: Unsure

Short description of error:
If Motion Blur is disabled while Persistent Data is enabled and the scene is re-rendered. The first re-render will result in animated objects rendering incorrectly or disappearing.
This issue only occurs in OptiX in my testing. CUDA and CPU rendering are unaffected.

Exact steps for others to reproduce the error:
There are a few options:

#90666 - Motion Blurred objects rendering incorrectly.blend

  1. Download the .blend file above.
  2. Ensure your GPU compute is set to OptiX
  3. Render a frame and take note of the cube.
  4. Turn off motion blur
  5. Render the frame again and observe that the cube is missing.
  6. Render the frame again and observe that the cube is back.

Or, you can follow the steps below to recreate the issue from a new file (video of steps also attached):

2021-08-14 16-10-32.mp4

  1. Create a new scene and change the render engine to Cycles.
  2. Change render device to GPU Compute, specifically OptiX
  3. Enable Motion Blur and Persistent Data in the Properties Editor
  4. Select the default cube and animate it moving.
  5. Render a frame where the object is moving and observe that the cube is visible.
  6. In the Properties Editor disable Motion Blur and re-render the frame. Notice how the cube is gone.
  7. Render the frame again and the cube will re-appear. This issue only occurs the first time you render the scene after disabling Motion Blur with Persistent Data on.

Note: If you rotate the object for your animation, the object will still be there, but it may render incorrectly. Specifically if you rotate the object and have a vector like Object from the Texture Coordinate node driving part of it's visuals, it will render incorrectly. Here's an example file:

#90666 - Motion Blur incorrect render - Rotation example.blend

In this scene, I'm rotating a sphere 70 degrees along the X axis in a single frame. I have used the Object output from the Texture Coordinate for it's colour. When motion blur is disabled and the scene is rendered, you can see that Object from the Texture Coordinate node is dimmed (all the values are lowered). When the scene is rendered again, the expected result shows up, a bright output.

This is more noticeable if you use math in combination with an output like Texture Coordinate to define colours on the sphere. Because the values are lower in the initial re-render, the math will not produce the results you expect.

#90666 - Motion blur on.png #90666 - Motion blur off.png #90666 - Motion blur off re-render.png
Render with motion blur First Render with motion blur disabled Second Render with motion blur disabled (expected result with motion blur off)
**System Information** Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01 **Blender Version** Broken version: 3.0.0 Alpha, branch: master, commit date: 2021-08-13 21:31, hash: `6a4533dd02` Broken version: 2.93.2 release Worked: Unsure **Short description of error:** If `Motion Blur` is disabled while `Persistent Data` is enabled and the scene is re-rendered. The first re-render will result in animated objects rendering incorrectly or disappearing. This issue only occurs in OptiX in my testing. CUDA and CPU rendering are unaffected. **Exact steps for others to reproduce the error:** There are a few options: [#90666 - Motion Blurred objects rendering incorrectly.blend](https://archive.blender.org/developer/F10280480/T90666_-_Motion_Blurred_objects_rendering_incorrectly.blend) 1. Download the .blend file above. 2. Ensure your GPU compute is set to `OptiX` 3. Render a frame and take note of the cube. 4. Turn off motion blur 5. Render the frame again and observe that the cube is missing. 6. Render the frame again and observe that the cube is back. Or, you can follow the steps below to recreate the issue from a new file (video of steps also attached): [2021-08-14 16-10-32.mp4](https://archive.blender.org/developer/F10280478/2021-08-14_16-10-32.mp4) 1. Create a new scene and change the render engine to Cycles. 2. Change render device to `GPU Compute`, specifically `OptiX` 3. Enable `Motion Blur` and `Persistent Data` in the `Properties Editor` 4. Select the default cube and animate it moving. 5. Render a frame where the object is moving and observe that the cube is visible. 6. In the `Properties Editor` disable `Motion Blur` and re-render the frame. Notice how the cube is gone. 7. Render the frame again and the cube will re-appear. This issue only occurs the first time you render the scene after disabling `Motion Blur` with `Persistent Data` on. Note: If you rotate the object for your animation, the object will still be there, but it may render incorrectly. Specifically if you rotate the object and have a vector like `Object` from the `Texture Coordinate` node driving part of it's visuals, it will render incorrectly. Here's an example file: [#90666 - Motion Blur incorrect render - Rotation example.blend](https://archive.blender.org/developer/F10280514/T90666_-_Motion_Blur_incorrect_render_-_Rotation_example.blend) In this scene, I'm rotating a sphere 70 degrees along the X axis in a single frame. I have used the `Object` output from the `Texture Coordinate` for it's colour. When motion blur is disabled and the scene is rendered, you can see that `Object` from the `Texture Coordinate` node is dimmed (all the values are lowered). When the scene is rendered again, the expected result shows up, a bright output. This is more noticeable if you use math in combination with an output like `Texture Coordinate` to define colours on the sphere. Because the values are lower in the initial re-render, the math will not produce the results you expect. |![#90666 - Motion blur on.png](https://archive.blender.org/developer/F10280509/T90666_-_Motion_blur_on.png)|![#90666 - Motion blur off.png](https://archive.blender.org/developer/F10280507/T90666_-_Motion_blur_off.png)|![#90666 - Motion blur off re-render.png](https://archive.blender.org/developer/F10280511/T90666_-_Motion_blur_off_re-render.png)| | -- | -- | -- | |Render with motion blur|First Render with motion blur disabled|Second Render with motion blur disabled (expected result with motion blur off)|
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Alaska changed title from Persistent Data with motion blur invalidates "texture coordinate" and other mapping systems - OptiX Cycles to Disabling motion blur while persistent data is enabled results in objects disappearing or not rendering properly 2021-08-14 06:30:41 +02:00
Alaska changed title from Disabling motion blur while persistent data is enabled results in objects disappearing or not rendering properly to Disabling motion blur while persistent data is enabled results in objects disappearing or not rendering properly - Cycles OptiX 2021-08-14 06:39:26 +02:00
Author
Member

Added subscriber: @brecht

Added subscriber: @brecht
Author
Member

@brecht would you mind looking into this issue?

@brecht would you mind looking into this issue?
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, even after cycles-x merge.

Can confirm, even after cycles-x merge.
Member

Added subscriber: @pmoursnv

Added subscriber: @pmoursnv
Member
CC @pmoursnv

This issue was referenced by blender/cycles@7ede918584

This issue was referenced by blender/cycles@7ede918584f362e34b978b2a36622491f9a0ad75

This issue was referenced by 3a65571195

This issue was referenced by 3a65571195524ea50682611306ab4d103807112a
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Patrick Mours self-assigned this 2021-10-08 18:03:35 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90666
No description provided.